# doclayout

./: LICENSE  Makefile  README.md  changelog.md  doclayout.cabal  stack.yaml  update.hs
.github/workflows/: ci.yml
bench/: bench.hs
old/Text/: DocLayout.hs
src/Text/: DocLayout.hs  unicodeWidth.inc
src/Text/DocLayout/: ANSIFont.hs  Attributed.hs  HasChars.hs
test/: test.hs
udhr/: README  languages.txt
udhr/txt/: arz.txt  bng.txt  chn.txt  eng.txt  frn.txt  grk.txt  hnd.txt  jpn.txt  kkn.txt  rus.txt  tcv.txt  tcw.txt  thj.txt  vie.txt
