name:                doclayout
version:             0.1
synopsis:            A prettyprinting library for laying out text documents.
description:         doclayout is a prettyprinting library for laying out
                     text documents, with several features not present
                     in prettyprinting libraries designed for code.  It
                     was designed for use in pandoc.
homepage:            https://github.com/jgm/doclayout
license:             BSD3
license-file:        LICENSE
author:              John MacFarlane
maintainer:          jgm@berkeley.edu
copyright:           2016 John MacFarlane
category:            Text
build-type:          Simple
-- extra-source-files:
data-files:          README.md
                     changelog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.DocLayout
  build-depends:       base >= 4.9 && < 5,
                       text,
                       containers,
                       mtl,
                       unordered-containers,
                       string-conversions
  if !impl(ghc >= 8.0)
    build-depends:     semigroups == 0.18.*
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

test-suite doclayout-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base,
                       doclayout,
                       mtl,
                       containers,
                       tasty,
                       tasty-golden,
                       tasty-hunit,
                       filepath,
                       text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite olddoclayout-test
  type:                exitcode-stdio-1.0
  buildable:           False
  hs-source-dirs:      test, old
  other-modules:       Text.DocLayout
  main-is:             test.hs
  build-depends:       base,
                       mtl,
                       containers,
                       tasty,
                       tasty-golden,
                       tasty-hunit,
                       filepath,
                       text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark doclayout-bench
  Type:            exitcode-stdio-1.0
  Main-Is:         bench.hs
  Hs-Source-Dirs:  bench
  Build-Depends:   doclayout,
                   base >= 4.8 && < 5,
                   criterion >= 1.0 && < 1.6,
                   filepath,
                   text,
                   containers,
                   mtl,
                   unordered-containers,
                   string-conversions
  Ghc-Options:   -rtsopts -Wall -fno-warn-unused-do-bind
  Default-Language: Haskell2010

benchmark olddoclayout-bench
  Type:            exitcode-stdio-1.0
  Main-Is:         bench.hs
  Hs-Source-Dirs:  bench, old
  other-modules:   Text.DocLayout
  Build-Depends:   base >= 4.8 && < 5,
                   criterion >= 1.0 && < 1.6,
                   filepath,
                   text,
                   containers,
                   mtl,
                   unordered-containers,
                   string-conversions
  Ghc-Options:   -rtsopts -Wall -fno-warn-unused-do-bind
  Default-Language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/jgm/doclayout
